--- a/website/community/contract/community-charter.html
+++ b/website/community/contract/community-charter.html
@@ -184,7 +184,7 @@
     <p>
       The community actively promotes a philosophy where members recognize in one another
       their differences and similarities,
-      respect that each individual's is responsible for their actions,
+      respect that each individual is responsible for their actions,
       and recognize that each individual is a sovereign being
       with a unique point-of-view, a cherished life, created by a higher power.
       In so doing, the community hopes its members treat each other as equals.
