--- a/website/mission/charter.html
+++ b/website/mission/charter.html
@@ -187,8 +187,7 @@
     </h3>
     <p>
       RCM promotes that its membership recognize in one another their differences
-      and similarities, respect each individual's ambitions
-      and motives as the individual's responsibility,
+      and similarities, that each individual is responsible for their actions,
       and recognize that each individual is a sovereign being with a unique point-of-view,
       a cherished life, created by a higher power. In so doing, RCM hopes its members
       treat each other as equals.
