--- a/website/forum/forum.html
+++ b/website/forum/forum.html
@@ -10,12 +10,48 @@
     </head>
 
     <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+      <h2 class="text-shadow">
         Forum
       </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
-        Need an outline here for forum.
+      <p class="text-shadow" style="font-size: larger">
+        This is an outline of a potential forum structure:
       </p>
+
+      <ul class="text-shadow">
+        <li>Community Related</li>
+        <ul>
+          <li>Ideas</li>
+          <ul>
+            <li>generating community income</li>
+            <li>creating a visitor center</li>
+            <li>teaching each other</li>
+            <p></p>
+          </ul>
+          <li>Problem-solving</li>
+          <li>Recycling Related</li>
+          <p></p>
+        </ul>
+
+        <li>Recycling Related</li>
+        <ul>
+          <li>Recycling Ideas</li>
+          <li>Problem-solving</li>
+          <p></p>
+        </ul>
+
+        <li>Website Related</li>
+        <ul>
+          <li>Website Ideas</li>
+          <li>Problem-solving</li>
+          <p></p>
+        </ul>
+
+        <li>RCM Related</li>
+        <ul>
+          <li>RCM Ideas</li>
+          <li>Problem-solving</li>
+        </ul>
+      </ul>
     </body>
   </html>
 </html>
