--- a/website/welcome.html
+++ b/website/welcome.html
@@ -13,7 +13,7 @@
       <h2 style="text-shadow: 1px 0px 36px #111111;">
         Welcome
       </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
+      <p class="text-shadow" style="font-size: larger">
         Recycle City Movement (<abbr title="Recycle City Movement">RCM</abbr>)
         is a non-profit organization dedicated to serve others by funding
         <abbr title="Recycle City Movement">
