--- a/website/welcome.html
+++ b/website/welcome.html
@@ -10,7 +10,7 @@
     </head>
 
     <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+      <h2 class="text-shadow">
         Welcome
       </h2>
       <p class="text-shadow" style="font-size: larger">
