--- a/website/mission/biz-plan.html
+++ b/website/mission/biz-plan.html
@@ -18,7 +18,7 @@
     </h1>
   </div>
 
-  <div style="text-shadow: 1px 0px 24px #111111; font-size: larger">
+  <div class="text-shadow" style="font-size: larger">
     <h2>
       The Recycle City Movement Business Plan
     </h2>
