--- a/website/community/contract/community-biz-plan.html
+++ b/website/community/contract/community-biz-plan.html
@@ -19,7 +19,7 @@
     </h1>
   </div>
 
-  <div style="text-shadow: 1px 0px 24px #111111; font-size: larger">
+  <div class="text-shadow" style="font-size: larger">
     <h2>
       The Community Business Plan
     </h2>
