--- a/website/community/community.html
+++ b/website/community/community.html
@@ -10,10 +10,10 @@
     </head>
 
     <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+      <h2 class="text-shadow">
         Community
       </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
+      <p class="text-shadow" style="font-size: larger">
         RCM supports communities with sponsorship after the community has signed
         a RCM community contract. The contract is composed of a community
         <a href="contract/community-charter.html">charter</a>
