--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>Recycle City Movement's Welcome Mat</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="./css/styles.css" />
@@ -71,25 +71,14 @@
         </ul>
       </div>
 
-      <iframe
-        src="welcome.html"
-        name="main-content"
-        id="main-iframe"
-        scrolling="no"
-        frameborder="0"
-        height="300px"
-        width="100%"
-       </iframe>
-
-      <script>
-        // Select the iframe element:
-        var iframe = document.getElementById("main-iframe");
-        
-        // Adjust the iframe height during onload event:
-        iframe.onload = function(){
-          iframe.style.height = iframe.contentWindow.document.body.scrollHeight + 'px';
-        }
-        </script>
+      <div class="iframe-container">
+        <iframe
+          src="welcome.html"
+          name="main-content"
+          scrolling="no"
+          frameborder="0"
+        ></iframe>
+      </div>
     </body>
   </html>
 </html>
