--- a/website/index.html
+++ b/website/index.html
@@ -6,10 +6,10 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>Recycle City Movement's Welcome Mat</title>
+      <title>RCM Development Pain</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="./css/styles.css"/>
       <base href="." target="_blank" />
     </head>
 
@@ -71,13 +71,8 @@
         </ul>
       </div>
 
-      <div class="iframe-container">
-        <iframe
-          src="welcome.html"
-          name="main-content"
-          scrolling="no"
-          frameborder="0"
-        ></iframe>
+      <div class="iframe-embed-wrapper iframe-embed-responsive">
+        <iframe class="iframe-embed" src="welcome.html" name="main-content"></iframe>
       </div>
     </body>
   </html>
