--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -10,12 +10,65 @@
     </head>
 
     <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+      <h2 class="text-shadow">
         Business
       </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
-        Need to create an outline for this content.
+      <p class="text-shadow" style="font-size: larger">
+        This is an outline of a potential business navigation structure:
       </p>
+
+      <ul class="text-shadow">
+        <li>Charity Fund</li>
+        <ul>
+          <li>Previous Elections</li>
+          <li>Coming Elections</li>
+          <ul>
+            <li>Past</li>
+            <li>Pending</li>
+            <p></p>
+          </ul>
+          <p></p>
+        </ul>
+
+        <li>Elections</li>
+        <ul>
+          <li>Previous Elections</li>
+          <li>Coming Elections</li>
+          <ul>
+            <li>Schedule</li>
+            <li>Nominees</li>
+            <p></p>
+          </ul>
+
+          <li>Current Election</li>
+          <ul>
+            <li>Candidates</li>
+            <li>Ballot Box</li>
+            <li>Election Standing</li>
+            <p></p>
+          </ul>
+          <p></p>
+        </ul>
+
+        <li>Communications</li>
+        <ul>
+          <li>E-Mails</li>
+          <li>Contacts</li>
+          <p></p>
+        </ul>
+
+        <li>Admin Tasks</li>
+        <ul>
+          <li>Task Templates</li>
+          <li>Task Queue</li>
+        </ul>
+
+        <li>Logs</li>
+        <ul>
+          <li>Sign-ins</li>
+          <li>Completed Tasks</li>
+        </ul>
+      </ul>
     </body>
   </html>
 </html>
