--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -20,8 +20,9 @@
       <ul class="text-shadow">
         <li>Charity Fund</li>
         <ul>
-          <li>Previous Elections</li>
-          <li>Coming Elections</li>
+          <li>Bank Statements</li>
+          <li>Donation Page</li>
+          <li>Community Payouts</li>
           <ul>
             <li>Past</li>
             <li>Pending</li>
