--- a/website/proposals/proposals.html
+++ b/website/proposals/proposals.html
@@ -9,13 +9,49 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+    <body class="text-shadow" style="font-size: larger">
+      <h3>
         Proposals
-      </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
-        Proposals need an outline.
+      </h3>
+      <p>
+        There are different kinds of proposals that members can create:
       </p>
+      <ul>
+        <li>a new community</li>
+        <li>a charity fund donation</li>
+        <li>a change to a business document or process</li>
+      </ul>
+      <p>
+        Proposals go through phases:
+      </p>
+      <ul>
+        <li>
+          During the first week a proposal is classified as a new proposal.
+        </li>
+        <li>
+          The proposal is then judged by the number of votes it has received.
+        </li>
+        <li>
+          If the proposal receives votes of at least 33% of its voter pool, it
+          becomes active.
+        </li>
+        <li>
+          At this stage, if the proposal is not active, it is deleted from the
+          ballot box.
+        </li>
+        <li>
+          The active proposal continues to remain in the ballot box for an
+          additional week, receiving votes.
+        </li>
+        <li>
+          At the end of the two week period the fate of the proposal is
+          determined.
+        </li>
+        <li>
+          If the proposal received more than 50% of the votes in its favor, then
+          the proposal is adopted, and its implementation process begins.
+        </li>
+      </ul>
     </body>
   </html>
 </html>
