--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
       <title>RCM Development Pain</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link rel="stylesheet" href="./css/styles.css"/>
+      <link rel="stylesheet" href="./css/styles.css" />
       <base href="." target="_blank" />
     </head>
 
@@ -64,15 +64,19 @@
           </li>
 
           <li>
-            <a href="links/links.html" target="main-content">
-              Links
+            <a href="connections/connections.html" target="main-content">
+              Connections
             </a>
           </li>
         </ul>
       </div>
 
       <div class="iframe-embed-wrapper iframe-embed-responsive">
-        <iframe class="iframe-embed" src="welcome.html" name="main-content"></iframe>
+        <iframe
+          class="iframe-embed"
+          src="welcome.html"
+          name="main-content"
+        ></iframe>
       </div>
     </body>
   </html>
