--- a/website/members/members.html
+++ b/website/members/members.html
@@ -9,13 +9,34 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+    <body class="text-shadow" style="font-size: larger">
+      <h3>
         Members
-      </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
-        Need an outline here.
-      </p>
+      </h3>
+      <p>This is a potential structure for the members page.</p>
+      <ul>
+        <li>Log-in / Register</li>
+        <li>My Profile</li>
+        <li>Browse Members Database:</li>
+        <ul>
+          <li>A...z</li>
+          <li>Donations By Date</li>
+          <li>Okay With A Promotion</li>
+          <li>Seeking A Community</li>
+          <li>Sorted By Class (active / inactive / both)</li>
+          <ol>
+            <li>Admin</li>
+            <li>Community Founder</li>
+            <li>Assistant</li>
+            <li>Novice</li>
+            <li>Forum Moderator</li>
+            <li>Community Member</li>
+            <li>Fund Supporter</li>
+            <li>Tech Developer</li>
+            <li>Promoter</li>
+          </ol>
+        </ul>
+      </ul>
     </body>
   </html>
 </html>
