--- a/website/technology/tech.html
+++ b/website/technology/tech.html
@@ -9,13 +9,23 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 style="text-shadow: 1px 0px 36px #111111;">
+    <body class="text-shadow" style="font-size: larger">
+      <img
+        src="../img/light-crystal/light-crystal.png"
+        alt="Light Crystal"
+        style="float:left; width:100px; height:80px; padding-right:20px"
+      />
+      <h3>
         Technology
-      </h2>
-      <p style="text-shadow: 1px 0px 24px #111111; font-size: larger">
-        Need to outline this content.
+      </h3>
+      <p>
+        The technology section is for sharing recycling technology. The
+        documents would be organized by common factors.
       </p>
+      <ul>
+        <li>PDFs</li>
+        <li>Videos</li>
+      </ul>
     </body>
   </html>
 </html>
