--- a/website/community/community.html
+++ b/website/community/community.html
@@ -9,18 +9,70 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 class="text-shadow">
+    <body class="text-shadow" style="font-size: larger">
+      <h3>
         Community
-      </h2>
-      <p class="text-shadow" style="font-size: larger">
-        RCM supports communities with sponsorship after the community has signed
-        a RCM community contract. The contract is composed of a community
+      </h3>
+      <p>The community page is for development and connecting communities.</p>
+
+      <h4>
+        Development
+      </h4>
+
+      <p>
+        RCM funds the development of new communities and the transformation of
+        existing communities.
+      </p>
+      <p>
+        If you'd like to become a Community Founder, one who purchases land and
+        other assets for establishing a community, or if you'd like to establish
+        funding for your existing community, then first read the community
+        <a href="contract/community-charter.html">charter</a> and community
+        <a href="contract/community-biz-plan.html">business plan</a>.
+      </p>
+      <p>RCM has a few requirements for supporting communities:</p>
+      <p>
+        The first step is to get funding approved. This is done by submitting a
+        proposal for a new community or an existing community.
+      </p>
+      <p>
+        If the proposal is accepted by the voting pool. RCM will ask that the
+        community founder to complete two incorporation processes. The community
+        needs two incorporate two legal entities:
+      </p>
+      <ul>
+        <li>
+          Create a non-profit organization that donates recycled products to the
+          greater population. The community produces the products, and takes
+          donations to the non-profit's charity fund that it owns and promotes
+          on a community website. RCM has a community website template that
+          communities can use to facilitate the website creation process.
+        </li>
+        <li>
+          Incorporate a for-profit business that funds a unity fund. This fund
+          pays community expenses and its members. Most of the business model is
+          up to community. This is an opportunity for a community to sustain
+          itself by producing goods and/or services from a functioning business.
+        </li>
+      </ul>
+      <p>
+        The last step to becoming a supported RCM community is that three
+        community members, and the three RCM finance administrators, need to
+        sign a RCM community contract. The contract is composed of a community
         <a href="contract/community-charter.html">charter</a>
         and a community
-        <a href="contract/community-biz-plan.html">business plan</a>
-        .
+        <a href="contract/community-biz-plan.html">business plan</a>.
       </p>
+
+      <h4>Finalizing The Proposal</h4>
+      <p>
+        This section is about how-to finalize an accepted proposal. There is a
+        how-to incorporate a non-profit recycling organization, a how-to
+        incorporate any of several business types, and how-to create a community
+        website.
+      </p>
+      <h4>Supported Communities</h4>
+      <p>These are links to RCM supported community websites.</p>
     </body>
   </html>
 </html>
