--- a/website/business/biz.html
+++ b/website/business/biz.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>RCM Business</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="../css/styles.css" />
@@ -13,7 +13,7 @@
       <h2 class="text-shadow">
         Business
       </h2>
-      <p class="text-shadow" style="font-size: larger">
+      <p class="text-shadow" style="font-size: larger;">
         This is an outline of a potential business navigation structure:
       </p>
 
