--- a/website/members/log-in.html
+++ b/website/members/log-in.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>RCM Sign-Up For New Members</title>
+    <title>RCM Log-in For New Members</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="../css/styles.css" />
   </head>
   <body class="text-shadow">
     <h2>
-      Sign-up
+      Log-in
     </h2>
     <p>
-      This is where new members will sign-up to become a member of RCM.
+      Existing members will have a sign-in form here.
     </p>
   </body>
 </html>
