--- a/website/mission/biz-plan.html
+++ b/website/mission/biz-plan.html
@@ -2,7 +2,7 @@
     This is the RCM Business Plan. The plan describes how the business wishes to develop.
 -->
 <head>
-  <title>RCM Development Pain</title>
+  <title>RCM Business Plan</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/styles.css" />
