--- a/website/mission/charter.html
+++ b/website/mission/charter.html
@@ -2,7 +2,7 @@
     This is the RCM Charter. The charter defines the business purpose and philosophy.
 -->
 <head>
-  <title>RCM Development Pain</title>
+  <title>RCM Charter</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/styles.css" />
