--- a/website/technology/tech.html
+++ b/website/technology/tech.html
@@ -2,22 +2,26 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>RCM Technology</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="../css/styles.css" />
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger">
-      <img
-        src="../img/light-crystal/light-crystal.png"
-        alt="Light Crystal"
-        style="float:left; width:100px; height:80px; padding-right:20px"
-      />
-      <h3>
-        Technology
-      </h3>
+    <body class="text-shadow" style="font-size: larger;">
+      <div>
+        <div>
+          <img
+            style="float: left; margin: 20px;"
+            src="../img/light-crystal/light-crystal.png"
+            alt="Light Crystal"
+          />
+        </div>
+        <div>
+          <h3>Technology</h3>
+        </div>
+      </div>
       <p>
         The technology section is for sharing recycling technology. The
         documents would be organized by common factors.
