--- a/website/connections/connections.html
+++ b/website/connections/connections.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>RCM Connections</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="../css/styles.css" />
