--- a/website/index.html
+++ b/website/index.html
@@ -1,28 +1,33 @@
 <!--
-    This is the website's welcome page, its root page.
+    This is the website's welcome mat.
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>RCM Welcome Mat</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="./css/styles.css" />
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <div class="header">
-        <img
-          src="img/RCM-symbol/RCM-symbol.png"
-          alt="The RCM Logo"
-          style="float:left; width:100px; height:80px; padding-right:20px"
-        />
-        <h1>
-          Recycle City Movement
-        </h1>
+    <body class="text-shadow" >
+      <div class="flex-container">
+        <div>
+          <img
+            src="img/RCM-symbol/RCM-symbol.png"
+            alt="The RCM Logo"
+          />
+        </div>
+        <div>
+          <h1 class="text-shadow" >Recycle City Movement</h1>
+        </div>
+        <nav style="font-size: 15px;">
+          <a href="members/log-in.html" target="main-content">Log-in</a></br>
+          <a href="members/sign-up.html" target="main-content">Sign-up</a>
+        </nav>
       </div>
 
       <div>
