--- a/website/members/members.html
+++ b/website/members/members.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Development Pain</title>
+      <title>RCM Members</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="../css/styles.css" />
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" style="font-size: larger">
+    <body class="text-shadow" style="font-size: larger;">
       <h3>
         Members
       </h3>
