--- a/website/index.html
+++ b/website/index.html
@@ -1,28 +1,28 @@
 <!--
-    This is the website's welcome mat.
+    This is the website's root page.
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html lang="en-US">
   <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-      <title>RCM Welcome Mat</title>
+      <title>Recycle City Movement</title>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="./css/styles.css" />
       <base href="." target="_blank" />
     </head>
 
-    <body class="text-shadow" >
-      <div class="flex-container">
+    <body class="text-shadow">
+      <div class="flex-container" style="margin-left: 20px;">
         <div>
           <img
             src="img/RCM-symbol/RCM-symbol.png"
             alt="The RCM Logo"
           />
         </div>
-        <div>
-          <h1 class="text-shadow" >Recycle City Movement</h1>
+        <div style="flex-grow: 2">
+          <h1>Recycle City Movement</h1>
         </div>
         <nav style="font-size: 15px;">
           <a href="members/log-in.html" target="main-content">Log-in</a></br>
