--- a/website/welcome.html
+++ b/website/welcome.html
@@ -9,29 +9,21 @@
       <base href="." target="_blank" />
     </head>
 
-    <body>
-      <h2 class="text-shadow">
-        Welcome
-      </h2>
-      <p class="text-shadow" style="font-size: larger;">
+    <body class="text-shadow">
+      <h3>Welcome</h3>
+      <p>
         Recycle City Movement (<abbr title="Recycle City Movement">RCM</abbr>)
         is a non-profit organization dedicated to serve others by funding
-        <abbr title="Recycle City Movement">
-          RCM
-        </abbr>
+        <abbr title="Recycle City Movement">RCM</abbr>
         chartered communities. The organization is run entirely by volunteers
         from this website, and is always looking for more volunteers. To
         understand what
-        <abbr title="Recycle City Movement">
-          RCM
-        </abbr>
+        <abbr title="Recycle City Movement">RCM</abbr>
         is all about, read the
-        <abbr title="Recycle City Movement">
-          RCM
-        </abbr>
-        <a href="mission/charter.html">charter</a>
+        <abbr title="Recycle City Movement">RCM</abbr>
+        <a href="mission/charter.html" target="main-content">charter</a>
         and the
-        <a href="mission/biz-plan.html">business plan</a>
+        <a href="mission/biz-plan.html" target="main-content">business plan</a>
         .
       </p>
     </body>
